# wasm-chip8

./: .gitignore  README.md  index.html  webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs  utils.rs
js/: index.js
js/components/: chip8-emulator.js  upload-button.js
js/io-interfaces/: audio.js  keyboard.js
